--- a/12.Support Vector Regression Implementation.ipynb
+++ b/12.Support Vector Regression Implementation.ipynb
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,6 +702,208 @@
     "import numpy\n",
     "numpy.set_printoptions(threshold=sys.maxsize)\n",
     "X_train=ct.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.  ,  0.  ,  0.  ,  1.76,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  1.66,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.5 ,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.01,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.  ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  4.  ,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  5.2 ,  0.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  4.  ,  1.  ,  1.  ,  1.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  5.  ,  1.  ,  0.  ,  1.  ,  5.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.  ,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.75,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.12,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  3.  ,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  5.  ,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  4.  ,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.  ,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.39,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.3 ,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.03,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.64,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.17,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  3.  ,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.34,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.52,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.  ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.14,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.47,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.  ,  1.  ,  1.  ,  0.  ,  3.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.61,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.5 ,  0.  ,  1.  ,  0.  ,  3.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.  ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  1.5 ,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.5 ,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  1.32,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  4.  ,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.18,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.75,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  5.14,  0.  ,  0.  ,  0.  ,  5.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.07,  0.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.5 ,  0.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.25,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.56,  1.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.05,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  4.19,  0.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.83,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.  ,  1.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  4.  ,  1.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  1.5 ,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  4.73,  1.  ,  1.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.74,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.  ,  0.  ,  1.  ,  0.  ,  1.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.47,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  5.15,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.23,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.31,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  5.92,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.  ,  1.  ,  1.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  3.  ,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.23,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.88,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.  ,  1.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  1.5 ,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.18,  1.  ,  0.  ,  1.  ,  3.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.  ,  0.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  4.  ,  0.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.  ,  1.  ,  1.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  3.  ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.54,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  3.4 ,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  , 10.  ,  1.  ,  1.  ,  0.  ,  3.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.  ,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  1.56,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.71,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  4.  ,  1.  ,  1.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.6 ,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.02,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.  ,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  1.83,  0.  ,  0.  ,  1.  ,  1.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.03,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  2.5 ,  0.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.  ,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.31,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  7.58,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.  ,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.  ,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.48,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  1.5 ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.  ,  1.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.06,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.  ,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.71,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.44,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  1.57,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  4.  ,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  5.  ,  0.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  1.5 ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  5.17,  0.  ,  0.  ,  1.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  3.25,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  5.  ,  0.  ,  0.  ,  1.  ,  6.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.24,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  6.5 ,  1.  ,  1.  ,  0.  ,  4.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  4.08,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.27,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.76,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.5 ,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  4.5 ,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  9.  ,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.68,  1.  ,  1.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.61,  0.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.  ,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  5.6 ,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  4.  ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.25,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  4.3 ,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  1.25,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  4.  ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  1.5 ,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.  ,  1.  ,  1.  ,  0.  ,  5.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.  ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.  ,  0.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  1.8 ,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.02,  1.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.  ,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.  ,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.2 ,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.  ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  3.  ,  0.  ,  0.  ,  1.  ,  3.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  3.25,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.  ,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.5 ,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.  ,  1.  ,  1.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  4.3 ,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.5 ,  0.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.  ,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.  ,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.5 ,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.5 ,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.15,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  3.5 ,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  3.  ,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.61,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.45,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.  ,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  1.  ,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  6.7 ,  1.  ,  0.  ,  1.  ,  6.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  1.48,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.  ,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.  ,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  5.  ,  0.  ,  1.  ,  1.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  4.  ,  1.  ,  0.  ,  1.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  1.92,  1.  ,  1.  ,  1.  ,  1.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.55,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.  ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  3.41,  1.  ,  1.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  1.58,  1.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  4.  ,  1.  ,  1.  ,  1.  ,  3.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.45,  0.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.98,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.5 ,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  4.29,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  5.85,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  4.34,  1.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.75,  0.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  2.5 ,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  1.67,  0.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.5 ,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.  ,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.24,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  1.01,  0.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  5.  ,  0.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  1.96,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  4.67,  0.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.75,  0.  ,  0.  ,  0.  ,  4.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  3.48,  0.  ,  1.  ,  1.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  1.5 ,  1.  ,  1.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  5.  ,  1.  ,  0.  ,  0.  ,  6.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  2.  ,  1.  ,  0.  ,  1.  ,  2.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  2.55,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.64,  1.  ,  0.  ,  0.  ,  3.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.92,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 1.  ,  0.  ,  0.  ,  2.72,  1.  ,  0.  ,  0.  ,  2.  ],\n",
+       "       [ 0.  ,  0.  ,  1.  ,  4.2 ,  0.  ,  0.  ,  1.  ,  6.  ],\n",
+       "       [ 0.  ,  1.  ,  0.  ,  3.23,  1.  ,  0.  ,  0.  ,  2.  ]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
    ]
   },
   {
