--- a/11-Random Forest/Projects/Regression/Random Forest Regression Implementation.ipynb
+++ b/11-Random Forest/Projects/Regression/Random Forest Regression Implementation.ipynb
@@ -448,6 +448,32 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "['vehicle_age',\n",
+       " 'km_driven',\n",
+       " 'mileage',\n",
+       " 'engine',\n",
+       " 'max_power',\n",
+       " 'seats',\n",
+       " 'selling_price']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[feature for feature in df.columns if df[feature].dtype !='O']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -472,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +632,7 @@
        "4    22.77    1498      98.59      5  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +661,7 @@
        "120"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,27 +672,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "model\n",
        "i20             906\n",
        "Swift Dzire     890\n",
        "Swift           781\n",
        "Alto            778\n",
        "City            757\n",
        "               ... \n",
-       "Quattroporte      1\n",
-       "GTC4Lusso         1\n",
-       "C                 1\n",
-       "Gurkha            1\n",
        "Altroz            1\n",
-       "Name: model, Length: 120, dtype: int64"
+       "C                 1\n",
+       "Ghost             1\n",
+       "Quattroporte      1\n",
+       "Gurkha            1\n",
+       "Name: count, Length: 120, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +837,7 @@
        "4    22.77    1498      98.59      5  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +857,7 @@
        "(3, 5, 2)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1166,7 @@
        "[15411 rows x 14 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1186,7 @@
        "((12328, 14), (3083, 14))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,15 +1198,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1197,10 +1217,10 @@
        "       [ 0.        ,  0.        ,  0.        , ..., -0.55471774,\n",
        "        -0.43582879, -0.40302241],\n",
        "       [ 1.        ,  0.        ,  0.        , ..., -0.04616815,\n",
-       "         0.06194201, -0.40302241]])"
+       "         0.06194201, -0.40302241]], shape=(12328, 14))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1294,14 +1314,14 @@
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 325886.8736\n",
-      "- Mean Absolute Error: 91467.6671\n",
+      "- Root Mean Squared Error: 325873.0088\n",
+      "- Mean Absolute Error: 91425.4705\n",
       "- R2 Score: 0.8691\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 253118.4156\n",
-      "- Mean Absolute Error: 112704.3545\n",
-      "- R2 Score: 0.9149\n",
+      "- Root Mean Squared Error: 253024.3951\n",
+      "- Mean Absolute Error: 112526.3461\n",
+      "- R2 Score: 0.9150\n",
       "===================================\n",
       "\n",
       "\n",
@@ -1312,22 +1332,22 @@
       "- R2 Score: 0.9995\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 309775.5497\n",
-      "- Mean Absolute Error: 125501.4245\n",
-      "- R2 Score: 0.8725\n",
+      "- Root Mean Squared Error: 314371.3484\n",
+      "- Mean Absolute Error: 126397.6295\n",
+      "- R2 Score: 0.8687\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 139138.1663\n",
-      "- Mean Absolute Error: 39895.9839\n",
-      "- R2 Score: 0.9761\n",
+      "- Root Mean Squared Error: 117369.1625\n",
+      "- Mean Absolute Error: 39541.7127\n",
+      "- R2 Score: 0.9830\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 221936.2665\n",
-      "- Mean Absolute Error: 100966.5873\n",
-      "- R2 Score: 0.9346\n",
+      "- Root Mean Squared Error: 227486.7742\n",
+      "- Mean Absolute Error: 101533.2299\n",
+      "- R2 Score: 0.9313\n",
       "===================================\n",
       "\n",
       "\n"
@@ -1380,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1407,50 +1427,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 6 candidates, totalling 18 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 32 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   5 out of  18 | elapsed:    2.8s remaining:    7.3s\n",
-      "[Parallel(n_jobs=-1)]: Done  15 out of  18 | elapsed:    3.0s remaining:    0.5s\n",
-      "[Parallel(n_jobs=-1)]: Done  18 out of  18 | elapsed:    3.0s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 32 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  98 tasks      | elapsed:   15.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 300 out of 300 | elapsed:   53.9s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 6 candidates, totalling 18 fits\n",
+      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n",
       "---------------- Best Params for KNN -------------------\n",
       "{'n_neighbors': 10}\n",
       "---------------- Best Params for RF -------------------\n",
-      "{'n_estimators': 100, 'min_samples_split': 2, 'max_features': 'auto', 'max_depth': None}\n"
+      "{'n_estimators': 1000, 'min_samples_split': 2, 'max_features': 5, 'max_depth': 15}\n"
      ]
     }
    ],
@@ -1476,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1485,26 +1474,26 @@
      "text": [
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 129998.4877\n",
-      "- Mean Absolute Error: 39738.5156\n",
-      "- R2 Score: 0.9792\n",
+      "- Root Mean Squared Error: 156976.3963\n",
+      "- Mean Absolute Error: 56492.9913\n",
+      "- R2 Score: 0.9696\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 228415.2018\n",
-      "- Mean Absolute Error: 102398.2134\n",
-      "- R2 Score: 0.9307\n",
+      "- Root Mean Squared Error: 213521.6542\n",
+      "- Mean Absolute Error: 98344.0099\n",
+      "- R2 Score: 0.9394\n",
       "===================================\n",
       "\n",
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 363464.0671\n",
-      "- Mean Absolute Error: 103451.3465\n",
+      "- Root Mean Squared Error: 363460.7706\n",
+      "- Mean Absolute Error: 103472.0474\n",
       "- R2 Score: 0.8371\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 263872.0571\n",
-      "- Mean Absolute Error: 117483.0441\n",
+      "- Root Mean Squared Error: 263888.0623\n",
+      "- Mean Absolute Error: 117496.2131\n",
       "- R2 Score: 0.9075\n",
       "===================================\n",
       "\n",
@@ -1515,7 +1504,7 @@
    "source": [
     "## Retraining the models with best parameters\n",
     "models = {\n",
-    "    \"Random Forest Regressor\": RandomForestRegressor(n_estimators=100, min_samples_split=2, max_features='auto', max_depth=None, \n",
+    "    \"Random Forest Regressor\": RandomForestRegressor(n_estimators=100, min_samples_split=2, max_features=5, max_depth=15, \n",
     "                                                     n_jobs=-1),\n",
     "     \"K-Neighbors Regressor\": KNeighborsRegressor(n_neighbors=10, n_jobs=-1)\n",
     "    \n",
@@ -1574,7 +1563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
