--- a/12-Adaboost/Projects/Projects/Adaboost Regression Implementation.ipynb
+++ b/12-Adaboost/Projects/Projects/Adaboost Regression Implementation.ipynb
@@ -652,18 +652,19 @@
     {
      "data": {
       "text/plain": [
+       "model\n",
        "i20             906\n",
        "Swift Dzire     890\n",
        "Swift           781\n",
        "Alto            778\n",
        "City            757\n",
        "               ... \n",
+       "Altroz            1\n",
+       "C                 1\n",
        "Ghost             1\n",
        "Quattroporte      1\n",
-       "Aura              1\n",
-       "Ghibli            1\n",
-       "Altroz            1\n",
-       "Name: model, Length: 120, dtype: int64"
+       "Gurkha            1\n",
+       "Name: count, Length: 120, dtype: int64"
       ]
      },
      "execution_count": 12,
@@ -1197,7 +1198,7 @@
        "       [ 0.        ,  0.        ,  0.        , ..., -0.55471774,\n",
        "        -0.43582879, -0.40302241],\n",
        "       [ 1.        ,  0.        ,  0.        , ..., -0.04616815,\n",
-       "         0.06194201, -0.40302241]])"
+       "         0.06194201, -0.40302241]], shape=(12328, 14))"
       ]
      },
      "execution_count": 20,
@@ -1295,14 +1296,14 @@
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 325886.8736\n",
-      "- Mean Absolute Error: 91467.6671\n",
+      "- Root Mean Squared Error: 325873.0088\n",
+      "- Mean Absolute Error: 91425.4705\n",
       "- R2 Score: 0.8691\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 253118.4156\n",
-      "- Mean Absolute Error: 112704.3545\n",
-      "- R2 Score: 0.9149\n",
+      "- Root Mean Squared Error: 253024.3951\n",
+      "- Mean Absolute Error: 112526.3461\n",
+      "- R2 Score: 0.9150\n",
       "===================================\n",
       "\n",
       "\n",
@@ -1313,35 +1314,35 @@
       "- R2 Score: 0.9995\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 305593.0563\n",
-      "- Mean Absolute Error: 124819.3507\n",
-      "- R2 Score: 0.8759\n",
+      "- Root Mean Squared Error: 297579.9808\n",
+      "- Mean Absolute Error: 123746.7483\n",
+      "- R2 Score: 0.8824\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 129769.2686\n",
-      "- Mean Absolute Error: 39653.0860\n",
-      "- R2 Score: 0.9792\n",
+      "- Root Mean Squared Error: 140248.3781\n",
+      "- Mean Absolute Error: 39820.7094\n",
+      "- R2 Score: 0.9757\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 227094.9323\n",
-      "- Mean Absolute Error: 102202.3818\n",
-      "- R2 Score: 0.9315\n",
+      "- Root Mean Squared Error: 224913.8873\n",
+      "- Mean Absolute Error: 101378.0220\n",
+      "- R2 Score: 0.9328\n",
       "===================================\n",
       "\n",
       "\n",
       "Adaboost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 416905.3901\n",
-      "- Mean Absolute Error: 277555.1749\n",
-      "- R2 Score: 0.7857\n",
+      "- Root Mean Squared Error: 506547.4726\n",
+      "- Mean Absolute Error: 410410.1570\n",
+      "- R2 Score: 0.6836\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 452194.9658\n",
-      "- Mean Absolute Error: 297953.0288\n",
-      "- R2 Score: 0.7284\n",
+      "- Root Mean Squared Error: 570698.1849\n",
+      "- Mean Absolute Error: 428966.0828\n",
+      "- R2 Score: 0.5673\n",
       "===================================\n",
       "\n",
       "\n"
@@ -1414,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,62 +1436,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 6 candidates, totalling 18 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 32 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   5 out of  18 | elapsed:    2.7s remaining:    7.3s\n",
-      "[Parallel(n_jobs=-1)]: Done  15 out of  18 | elapsed:    3.0s remaining:    0.5s\n",
-      "[Parallel(n_jobs=-1)]: Done  18 out of  18 | elapsed:    3.0s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 32 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  98 tasks      | elapsed:   14.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 300 out of 300 | elapsed:  1.1min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 32 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  11 out of  36 | elapsed:    0.5s remaining:    1.3s\n",
-      "[Parallel(n_jobs=-1)]: Done  30 out of  36 | elapsed:    0.8s remaining:    0.1s\n",
-      "[Parallel(n_jobs=-1)]: Done  36 out of  36 | elapsed:    1.1s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------- Best Params for KNN -------------------\n",
-      "{'n_neighbors': 10}\n",
-      "---------------- Best Params for RF -------------------\n",
-      "{'n_estimators': 500, 'min_samples_split': 2, 'max_features': 8, 'max_depth': None}\n",
-      "---------------- Best Params for Adaboost -------------------\n",
-      "{'n_estimators': 60, 'loss': 'linear'}\n"
+      "Fitting 3 folds for each of 6 candidates, totalling 18 fits\n",
+      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n",
+      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n",
+      "---------------- Best Params and best_score for KNN -------------------\n",
+      "({'n_neighbors': 10}, np.float64(0.7770245276208131))\n",
+      "---------------- Best Params and best_score for RF -------------------\n",
+      "({'n_estimators': 100, 'min_samples_split': 2, 'max_features': 7, 'max_depth': 15}, np.float64(0.8635870998185199))\n",
+      "---------------- Best Params and best_score for Adaboost -------------------\n",
+      "({'n_estimators': 80, 'loss': 'linear'}, np.float64(0.6395032627420297))\n"
      ]
     }
    ],
@@ -1507,16 +1461,16 @@
     "                                   verbose=2,\n",
     "                                   n_jobs=-1)\n",
     "    random.fit(X_train, y_train)\n",
-    "    model_param[name] = random.best_params_\n",
+    "    model_param[name] = (random.best_params_,random.best_score_)\n",
     "\n",
     "for model_name in model_param:\n",
-    "    print(f\"---------------- Best Params for {model_name} -------------------\")\n",
+    "    print(f\"---------------- Best Params and best_score for {model_name} -------------------\")\n",
     "    print(model_param[model_name])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1525,40 +1479,40 @@
      "text": [
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 128802.0989\n",
-      "- Mean Absolute Error: 39966.8815\n",
-      "- R2 Score: 0.9795\n",
+      "- Root Mean Squared Error: 149741.1877\n",
+      "- Mean Absolute Error: 54926.3459\n",
+      "- R2 Score: 0.9724\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 230608.2502\n",
-      "- Mean Absolute Error: 102247.4156\n",
-      "- R2 Score: 0.9294\n",
+      "- Root Mean Squared Error: 207169.0236\n",
+      "- Mean Absolute Error: 97073.2667\n",
+      "- R2 Score: 0.9430\n",
       "===================================\n",
       "\n",
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 363464.0671\n",
-      "- Mean Absolute Error: 103451.3465\n",
+      "- Root Mean Squared Error: 363460.7706\n",
+      "- Mean Absolute Error: 103472.0474\n",
       "- R2 Score: 0.8371\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 263872.0571\n",
-      "- Mean Absolute Error: 117483.0441\n",
+      "- Root Mean Squared Error: 263888.0623\n",
+      "- Mean Absolute Error: 117496.2131\n",
       "- R2 Score: 0.9075\n",
       "===================================\n",
       "\n",
       "\n",
       "Adaboost\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 453454.8975\n",
-      "- Mean Absolute Error: 337930.1634\n",
-      "- R2 Score: 0.7465\n",
+      "- Root Mean Squared Error: 404266.0879\n",
+      "- Mean Absolute Error: 262808.9964\n",
+      "- R2 Score: 0.7985\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 530557.9592\n",
-      "- Mean Absolute Error: 361436.4758\n",
-      "- R2 Score: 0.6261\n",
+      "- Root Mean Squared Error: 425679.1657\n",
+      "- Mean Absolute Error: 277304.2188\n",
+      "- R2 Score: 0.7593\n",
       "===================================\n",
       "\n",
       "\n"
@@ -1568,10 +1522,10 @@
    "source": [
     "## Retraining the models with best parameters\n",
     "models = {\n",
-    "    \"Random Forest Regressor\": RandomForestRegressor(n_estimators=100, min_samples_split=2, max_features='auto', max_depth=None, \n",
+    "    \"Random Forest Regressor\": RandomForestRegressor(n_estimators=100, min_samples_split=2, max_features=7, max_depth=15, \n",
     "                                                     n_jobs=-1),\n",
     "     \"K-Neighbors Regressor\": KNeighborsRegressor(n_neighbors=10, n_jobs=-1),\n",
-    "     \"Adaboost\":AdaBoostRegressor(n_estimators=60,loss='linear')\n",
+    "     \"Adaboost\":AdaBoostRegressor(n_estimators=80,loss='linear')\n",
     "    \n",
     "}\n",
     "for i in range(len(list(models))):\n",
@@ -1628,7 +1582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
