gradient_boost-regressor

--- a/13-Gradient Boosting/Projects/Regression/Gradientboost Regression Implementation.ipynb
+++ b/13-Gradient Boosting/Projects/Regression/Gradientboost Regression Implementation.ipynb
@@ -652,18 +652,19 @@
     {
      "data": {
       "text/plain": [
-       "i20            906\n",
-       "Swift Dzire    890\n",
-       "Swift          781\n",
-       "Alto           778\n",
-       "City           757\n",
-       "              ... \n",
-       "Ghost            1\n",
-       "GTC4Lusso        1\n",
-       "Gurkha           1\n",
-       "Aura             1\n",
-       "Ghibli           1\n",
-       "Name: model, Length: 120, dtype: int64"
+       "model\n",
+       "i20             906\n",
+       "Swift Dzire     890\n",
+       "Swift           781\n",
+       "Alto            778\n",
+       "City            757\n",
+       "               ... \n",
+       "Altroz            1\n",
+       "C                 1\n",
+       "Ghost             1\n",
+       "Quattroporte      1\n",
+       "Gurkha            1\n",
+       "Name: count, Length: 120, dtype: int64"
       ]
      },
      "execution_count": 12,
@@ -1197,7 +1198,7 @@
        "       [ 0.        ,  0.        ,  0.        , ..., -0.55471774,\n",
        "        -0.43582879, -0.40302241],\n",
        "       [ 1.        ,  0.        ,  0.        , ..., -0.04616815,\n",
-       "         0.06194201, -0.40302241]])"
+       "         0.06194201, -0.40302241]], shape=(12328, 14))"
       ]
      },
      "execution_count": 20,
@@ -1296,14 +1297,14 @@
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 325886.8736\n",
-      "- Mean Absolute Error: 91467.6671\n",
+      "- Root Mean Squared Error: 325873.0088\n",
+      "- Mean Absolute Error: 91425.4705\n",
       "- R2 Score: 0.8691\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 253118.4156\n",
-      "- Mean Absolute Error: 112704.3545\n",
-      "- R2 Score: 0.9149\n",
+      "- Root Mean Squared Error: 253024.3951\n",
+      "- Mean Absolute Error: 112526.3461\n",
+      "- R2 Score: 0.9150\n",
       "===================================\n",
       "\n",
       "\n",
@@ -1314,35 +1315,35 @@
       "- R2 Score: 0.9995\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 305299.7207\n",
-      "- Mean Absolute Error: 125466.7991\n",
-      "- R2 Score: 0.8762\n",
+      "- Root Mean Squared Error: 294290.3040\n",
+      "- Mean Absolute Error: 122253.4788\n",
+      "- R2 Score: 0.8850\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 155076.8819\n",
-      "- Mean Absolute Error: 40176.2373\n",
-      "- R2 Score: 0.9703\n",
+      "- Root Mean Squared Error: 125629.2736\n",
+      "- Mean Absolute Error: 39706.1774\n",
+      "- R2 Score: 0.9805\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 229169.8191\n",
-      "- Mean Absolute Error: 102220.2001\n",
-      "- R2 Score: 0.9302\n",
+      "- Root Mean Squared Error: 224713.5490\n",
+      "- Mean Absolute Error: 101010.3168\n",
+      "- R2 Score: 0.9329\n",
       "===================================\n",
       "\n",
       "\n",
       "Adaboost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 418464.4830\n",
-      "- Mean Absolute Error: 306779.6276\n",
-      "- R2 Score: 0.7841\n",
+      "- Root Mean Squared Error: 440711.2228\n",
+      "- Mean Absolute Error: 333562.1326\n",
+      "- R2 Score: 0.7605\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 454609.4495\n",
-      "- Mean Absolute Error: 327688.7964\n",
-      "- R2 Score: 0.7255\n",
+      "- Root Mean Squared Error: 473712.1502\n",
+      "- Mean Absolute Error: 352333.1732\n",
+      "- R2 Score: 0.7019\n",
       "===================================\n",
       "\n",
       "\n",
@@ -1353,9 +1354,9 @@
       "- R2 Score: 0.9482\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 256880.4088\n",
-      "- Mean Absolute Error: 126637.5099\n",
-      "- R2 Score: 0.9123\n",
+      "- Root Mean Squared Error: 256083.8798\n",
+      "- Mean Absolute Error: 126490.0970\n",
+      "- R2 Score: 0.9129\n",
       "===================================\n",
       "\n",
       "\n"
@@ -1444,6 +1445,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ❗❗ Training time will be around 1 hr if you have \"8GB\" ram and \"Intel i5\" processor ❗❗"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -1452,43 +1460,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 32 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  98 tasks      | elapsed:   20.2s\n",
-      "[Parallel(n_jobs=-1)]: Done 300 out of 300 | elapsed:   54.0s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 32 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done 144 tasks      | elapsed:    0.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 237 out of 300 | elapsed:   16.6s remaining:    4.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 300 out of 300 | elapsed:  9.9min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n",
+      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n",
       "---------------- Best Params for RF -------------------\n",
-      "{'n_estimators': 100, 'min_samples_split': 2, 'max_features': 8, 'max_depth': 15}\n",
+      "{'n_estimators': 200, 'min_samples_split': 2, 'max_features': 7, 'max_depth': 15}\n",
       "---------------- Best Params for GradientBoost -------------------\n",
-      "{'n_estimators': 200, 'min_samples_split': 8, 'max_depth': 10, 'loss': 'huber', 'criterion': 'mse'}\n"
+      "{'n_estimators': 200, 'min_samples_split': 2, 'max_depth': 10, 'loss': 'huber', 'criterion': 'friedman_mse'}\n"
      ]
     }
    ],
@@ -1514,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1523,27 +1500,27 @@
      "text": [
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 133489.8497\n",
-      "- Mean Absolute Error: 39724.3165\n",
-      "- R2 Score: 0.9780\n",
+      "- Root Mean Squared Error: 132485.1224\n",
+      "- Mean Absolute Error: 54464.4996\n",
+      "- R2 Score: 0.9784\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 222711.7974\n",
-      "- Mean Absolute Error: 101412.0000\n",
-      "- R2 Score: 0.9341\n",
+      "- Root Mean Squared Error: 210964.9993\n",
+      "- Mean Absolute Error: 97539.0376\n",
+      "- R2 Score: 0.9409\n",
       "===================================\n",
       "\n",
       "\n",
       "GradientBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 68673.6455\n",
-      "- Mean Absolute Error: 37702.1429\n",
-      "- R2 Score: 0.9942\n",
+      "- Root Mean Squared Error: 45870.9872\n",
+      "- Mean Absolute Error: 29869.8528\n",
+      "- R2 Score: 0.9974\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 227779.4363\n",
-      "- Mean Absolute Error: 97038.0649\n",
-      "- R2 Score: 0.9311\n",
+      "- Root Mean Squared Error: 297609.8555\n",
+      "- Mean Absolute Error: 102383.1300\n",
+      "- R2 Score: 0.8823\n",
       "===================================\n",
       "\n",
       "\n"
@@ -1553,10 +1530,10 @@
    "source": [
     "## Retraining the models with best parameters\n",
     "models = {\n",
-    "    \"Random Forest Regressor\": RandomForestRegressor(n_estimators=100, min_samples_split=2, max_features='auto', max_depth=None, \n",
+    "    \"Random Forest Regressor\": RandomForestRegressor(n_estimators=200, min_samples_split=2, max_features=7, max_depth=15, \n",
     "                                                     n_jobs=-1),\n",
     "     \"GradientBoost Regressor\":GradientBoostingRegressor(n_estimators= 200,\n",
-    "                                                         min_samples_split=8, max_depth=10, loss= 'huber', criterion='mse')\n",
+    "                                                         min_samples_split=2, max_depth=10, loss= 'huber', criterion='friedman_mse')\n",
     "    \n",
     "}\n",
     "for i in range(len(list(models))):\n",
@@ -1613,7 +1590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
